--- a/doc-Deployment_Planning_Guide/Introduction_to_Red_Hat_CloudForms.adoc
+++ b/doc-Deployment_Planning_Guide/Introduction_to_Red_Hat_CloudForms.adoc
@@ -43,9 +43,9 @@ To use CloudForms Management Engine, the following requirements must be met:
 * The resources that you want to control must have a SmartProxy associated with them.
 
 [IMPORTANT]
-=======
-Due to browser limitations, Red Hat supports logging in to only one tab for each multi-tabbed browser. Console settings are saved for the active tab only. For the same reason, CloudForms Management Engine does not guarantee that the browser's btn:[Back] button will produce the desired results. Red Hat recommends using the breadcrumbs provided in the Console.
-=======
+======
+Due to browser limitations, Red Hat supports logging in to only one tab for each multi-tabbed browser. Console settings are saved for the active tab only. For the same reason, CloudForms Management Engine does not guarantee that the browser's *Back* button will produce the desired results. Red Hat recommends using the breadcrumbs provided in the Console.
+======
 
 === Terminology
 
@@ -154,7 +154,7 @@ You can find a list of publicly available mailing lists at https://www.redhat.co
 
 If you find a typographical error in this manual, or if you have thought of a way to make this manual better, please submit a report to GSS through the customer portal.
 
-When submitting a report, be sure to mention the manual's identifier: +Deployment Planning Guide+
+When submitting a report, be sure to mention the manual's identifier: `Deployment Planning Guide`
 
 If you have a suggestion for improving the documentation, try to be as specific as possible when describing it.
 If you have found an error, please include the section number and some of the surrounding text so we can find it easily.
