--- a/doc-Deployment_Planning_Guide/Security.adoc
+++ b/doc-Deployment_Planning_Guide/Security.adoc
@@ -33,5 +33,5 @@
 |CFME Appliance (SmartProxy) |RHEV-M Server |HTTPS |8443 |  |API communications to RHEV-M environment (Inventory, Operations, SmartProxy)
 |CFME Appliance (C&U) |RHEV-M Server |PostgreSQL |5432 |  |RHEV-M History Database (Database connectivity not enabled by default). See https://access.redhat.com/solutions/63277[How to access the RHEV-M Postgres DB from a remote machine.]
 |CFME Appliance |RHEV-H Hosts or RHEL Hypervisors |SSH|22 |  |SSH connections
-|CFME Appliance |RHEV-H Hosts or RHEL Hypervisors |DirectLUN |  |Direct LUN hook must be installed and enabled for embedded VM scanning on FC or iSCSI storage devices. Not a tcp/udp connection.
+|CFME Appliance |RHEV-H Hosts or RHEL Hypervisors |DirectLUN |  |Direct LUN hook must be installed and enabled for embedded VM scanning on FC or iSCSI storage devices. Not a TCP/UDP connection.
 |=======================================================================
