--- a/doc-Deployment_Planning_Guide/Planning.adoc
+++ b/doc-Deployment_Planning_Guide/Planning.adoc
@@ -5,7 +5,7 @@ This guide provides some general guidelines to planning a deployment on Red Hat 
 
 === Regions
 
-Use regions for centralizing data which is collected from public and private virtualization environments. A region is ultimately represented as a single database for the VMDB. Regions are particularly useful when multiple geographical locations need to be managed as they enable all the data collection to happen at each particular location and avoid data collection traffic across slow links between networks.
+Use regions for centralizing data which is collected from public and private virtualization environments. A region is ultimately represented as a single database for the VMDB. Regions are particularly useful when multiple geographical locations need to be managed, as they enable all the data collection to happen at each particular location and avoid data collection traffic across slow links between networks.
 
 When multiple regions are being used, each with their own unique ID, a master region can be created to centralize the data of all the children regions into a single master database. To do this, configure each child region to replicate its data to the master region database (Red Hat recommends use of region 99). This parent and child region is a one-to-many relationship.
 
@@ -21,10 +21,10 @@ The Master appliance is located in Chicago and contains a master region and a su
 Likewise, the San Diego technology center contains a single subregion managing a single zone.
 
 [NOTE]
-==========
+======
 * Replicating a parent region to a higher-level parent is not supported.
 * Parent regions can be configured after the child regions are online.
-==========
+======
 
 The following diagram provides a closer look at a region:
 
