--- a/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/Configuring_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/Configuring_CloudForms.adoc
@@ -77,7 +77,7 @@ Before installing an internal database, add a disk to the infrastructure hosting
 . Start the appliance and open a terminal from your virtualization or cloud provider.
 . After starting the appliance, log in with a user name of 'root' and the default password of 'smartvm'. This displays the Bash prompt for the 'root' user.
 . Enter the 'appliance_console' command. The CloudForms Management Engine Appliance summary screen displays.
-. Press kbd:[Enter] to manually configure settings.
+. Press +Enter+ to manually configure settings.
 . Select *8) Configure Database* from the menu.
 . You are prompted to create or fetch an encryption key.
 * If this is the first CFME appliance, choose *1) Create key*.
@@ -117,10 +117,9 @@ Because the postgresql.conf file controls the operation of all databases managed
 =======
 CloudForms Management Engine 4.x requires PostgreSQL version 9.4.
 =======
-
-. Start the appliance and open a terminal console from your virtualization or cloud provider.
-. After starting the appliance, log in with a user name of **root** and the default password of **smartvm**. This displays the Bash prompt for the **root** user.
-. Enter the **appliance_console** command. The CloudForms Management Engine Appliance summary screen displays.
+. Start the appliance and open a terminal from your virtualization or cloud provider.
+. After starting the appliance, log in with a user name of 'root' and the default password of 'smartvm'. This displays the Bash prompt for the 'root' user.
+. Enter the 'appliance_console' command. The CloudForms Management Engine Appliance summary screen displays.
 . Press +Enter+ to manually configure settings.
 . Select +8) Configure Database+ from the menu.
 . You are prompted to create or fetch a security key.
@@ -140,9 +139,9 @@ CloudForms Management Engine configures the external database.
 You can configure a worker appliance through the terminal. These steps demonstrate how to join a worker appliance to an appliance that already has a region configured with a database.
 
 
-. Start the appliance and open a terminal console from your virtualization or cloud provider.
-. After starting the appliance, log in with a user name of **root** and the default password of **smartvm**. This displays the Bash prompt for the **root** user.
-. Enter the **appliance_console** command. The CloudForms Management Engine Appliance summary screen displays.
+. Start the appliance and open a terminal from your virtualization or cloud provider.
+. After starting the appliance, log in with a user name of 'root' and the default password of 'smartvm'. This displays the Bash prompt for the 'root' user.
+. Enter the 'appliance_console' command. The CloudForms Management Engine Appliance summary screen displays.
 . Press +Enter+ to manually configure settings.
 . Select +8) Configure Database+ from the menu.
 . You are prompted to create or fetch a security key. Select the option to fetch the key from the first CFME appliance. All CFME appliances in a multi-region deployment must use the same key.
