--- a/doc-Installing_CloudForms_on_VMware_vSphere/Configuring_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_VMware_vSphere/Configuring_CloudForms.adoc
@@ -1,5 +1,3 @@
-:experimental:
-
 [[Configuring-cloudforms]]
 == Configuring CloudForms
 
@@ -14,12 +12,12 @@ The CloudForms Management Engine Appliance is intended to have minimal configura
 
 The procedure describes how to make changes to the configuration settings on the CloudForms Management Engine appliance.
 
-. After starting the appliance, log in with a user name of **root** and the default password of **smartvm**. This displays the Bash prompt for the **root** user.
-. Enter the **appliance_console** command. The +CloudForms Management Engine Appliance summary screen+ displays.
-. Press kbd:[Enter] to manually configure settings.
-. Press the number for the item you want to change, and press kbd:[Enter]. The options for your selection are displayed.
+. After starting the appliance, log in with a user name of 'root'and the default password of 'smartvm'. This displays the Bash prompt for the *root* user.
+. Enter the 'appliance_console' command. The +CloudForms Management Engine Appliance summary screen+ displays.
+. Press 'Enter' to manually configure settings.
+. Press the number for the item you want to change, and press 'Enter'. The options for your selection are displayed.
 . Follow the prompts to make the changes.
-. Press kbd:[Enter] to accept a setting where applicable.
+. Press 'Enter' to accept a setting where applicable.
 
 [NOTE]
 ======
@@ -44,10 +42,10 @@ A valid fully qualified hostname for the CloudForms Management Engine appliance 
 * Use +Restore Database from Backup+ to restore the VMDB database from a previous backup.
 * Use +Setup Database Region+ to create regions for VMDB replication.
 * Use +Configure Database+ to configure the VMDB database. Use this option to configure the database for the appliance after installing and running it for the first time.
-* Use +Extend Temporary Storage+ to add temporary storage to the appliance. The appliance formats an unpartitioned disk attached to the appliance host and mounts it at **/var/www/miq_tmp**. The appliance uses this temporary storage directory to perform certain image download functions.
+* Use +Extend Temporary Storage+ to add temporary storage to the appliance. The appliance formats an unpartitioned disk attached to the appliance host and mounts it at '/var/www/miq_tmp'. The appliance uses this temporary storage directory to perform certain image download functions.
 * Use +Configure External Authentication (httpd)+ to configure authentication through an IPA server.
 * Use +Generate Custom Encryption Key+ to regenerate the encryption key used to encode plain text password.
-* Use +Harden Appliance Using SCAP Configuration+ to apply Security Content Automation Protocol (SCAP) standards to the appliance. You can view these SCAP rules in the **/var/www/miq/lib/appliance_console/config/scap_rules.yml** file.
+* Use +Harden Appliance Using SCAP Configuration+ to apply Security Content Automation Protocol (SCAP) standards to the appliance. You can view these SCAP rules in the '/var/www/miq/lib/appliance_console/config/scap_rules.yml' file.
 * Use +Stop Server Processes+ to stop all server processes. You may need to do this to perform maintenance.
 * Use +Start Server Processes+ to start the server. You may need to do this after performing maintenance.
 * Use +Restart Appliance+ to restart the CloudForms Management Engine Appliance. You can either restart the appliance and clear the logs or just restart the appliance.
@@ -76,9 +74,9 @@ Before installing an internal database, add a disk to the infrastructure hosting
 ======
 
 . Start the appliance and open a terminal from your virtualization or cloud provider.
-. After starting the appliance, log in with a user name of **root** and the default password of **smartvm**. This displays the Bash prompt for the **root** user.
-. Enter the **appliance_console** command. The CloudForms Management Engine Appliance summary screen displays.
-. Press kbd:[Enter] to manually configure settings.
+. After starting the appliance, log in with a user name of 'root' and the default password of 'smartvm'. This displays the Bash prompt for the *root* user.
+. Enter the 'appliance_console' command. The CloudForms Management Engine Appliance summary screen displays.
+. Press 'Enter' to manually configure settings.
 . Select +8) Configure Database+ from the menu.
 . You are prompted to create or fetch an encryption key.
 * If this is the first CFME appliance, choose +1) Create key+.
@@ -116,13 +114,13 @@ Because the postgresql.conf file controls the operation of all databases managed
 
 [NOTE]
 ======
-CloudForms Management Engine 3.x requires PostgreSQL version 9.2.4.
+CloudForms Management Engine 4.x requires PostgreSQL version 9.4.
 ======
 
 . Start the appliance and open a terminal console from your virtualization or cloud provider.
-. After starting the appliance, log in with a user name of **root** and the default password of **smartvm**. This displays the Bash prompt for the **root** user.
+. After starting the appliance, log in with a user name of 'root' and the default password of 'smartvm'. This displays the Bash prompt for the *root* user.
 . Enter the **appliance_console** command. The CloudForms Management Engine Appliance summary screen displays.
-. Press kbd:[Enter] to manually configure settings.
+. Press 'Enter' to manually configure settings.
 . Select +8) Configure Database+ from the menu.
 . You are prompted to create or fetch a security key.
 * If this is the first CFME appliance, select the option to create a key.
@@ -140,11 +138,11 @@ CloudForms Management Engine configures the external database.
 
 You can configure a worker appliance through the terminal. These steps demonstrate how to join a worker appliance to an appliance that already has a region configured with a database.
 
-. Start the appliance, and open a terminal console from your virtualization or cloud provider.
-. After starting the appliance, log in with a user name of **root** and the default password of **smartvm**. This displays the Bash prompt for the **root** user.
+. Start the appliance and open a terminal console from your virtualization or cloud provider.
+. After starting the appliance, log in with a user name of 'root' and the default password of 'smartvm'. This displays the Bash prompt for the *root* user.
 . Enter the **appliance_console** command. The CloudForms Management Engine Appliance summary screen displays.
-. Press kbd:[Enter] to manually configure settings.
-. Select +8) Configure Database+ from the menu.
+. Press 'Enter' to manually configure settings.
+. Select +8) Configure Database+ from the menu
 . You are prompted to create or fetch a security key. Select the option to fetch the key from the first CFME appliance. All CFME appliances in a multi-region deployment must use the same key.
 . Choose +2) External+ for the database location.
 . Enter the database hostname or IP address when prompted.
