deleted duplicate "run the"

--- a/doc-Installing_CloudForms_on_VMware_vSphere/Installing_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_VMware_vSphere/Installing_CloudForms.adoc
@@ -38,7 +38,7 @@ Use the following procedure to upload the CloudForms Management Engine Appliance
 . View the *OVF Template Details* page and click *Next*.
 . Select the deployment configuration from the drop-down menu and click *Next*. The option selected typically controls the memory settings, number of CPUs and reservations, and application-level configuration parameters. 
 . Select the host or cluster on which you want to deploy the OVF template and click *Next*.
-. Select the host on which you want to run the run the CloudForms Management Engine appliance, and click *Next*.
+. Select the host on which you want to run the CloudForms Management Engine appliance, and click *Next*.
 . Navigate to, and select the resource pool where you want to run the CloudForms Management Engine appliance and click *Next*.
 . Select a datastore to store the deployed CloudForms Management Engine Appliance, and click btn:[Next]. Ensure to select a datastore large enough to accommodate the virtual machine and all of its virtual disk files.
 . Select the disk format to store the virtual machine virtual disks, and click *Next*.
