--- a/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/Configuring_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/Configuring_CloudForms.adoc
@@ -14,10 +14,10 @@ The procedure describes how to make changes to the configuration settings on the
 
 . After starting the appliance, log in with a user name of 'root' and the default password of 'smartvm'. This displays the Bash prompt for the root user.
 . Enter the 'appliance_console' command. The CloudForms Management Engine Appliance summary screen displays.
-. Press *Enter* to manually configure settings.
-. Press the number for the item you want to change, and press *Enter*. The options for your selection are displayed.
+. Press 'Enter' to manually configure settings.
+. Press the number for the item you want to change, and press 'Enter'. The options for your selection are displayed.
 . Follow the prompts to make the changes.
-. Press *Enter* to accept a setting where applicable.
+. Press 'Enter' to accept a setting where applicable.
 
 [NOTE]
 =======
@@ -90,7 +90,7 @@ Before installing an internal database, add a disk to the infrastructure hosting
 Choose disk:
 ----
 +
-Enter +1+ to choose /dev/vdb for the database location.
+Enter *1* to choose '/dev/vdb' for the database location.
 
 .  When prompted, enter a unique three digit region ID to create a new region.
 +
