--- a/doc-Installing_CloudForms_on_VMware_vSphere/Configuring_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_VMware_vSphere/Configuring_CloudForms.adoc
@@ -90,7 +90,7 @@ Before installing an internal database, add a disk to the infrastructure hosting
 Choose disk:
 ----
 +
-Enter +1+ to choose /dev/vdb for the database location.
+Enter *1* to choose '/dev/vdb' for the database location.
 
 .  When prompted, enter a unique three digit region ID to create a new region.
 +
