--- a/doc-Installing_CloudForms_on_VMware_vSphere/Configuring_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_VMware_vSphere/Configuring_CloudForms.adoc
@@ -13,7 +13,7 @@ The CloudForms Management Engine Appliance is intended to have minimal configura
 The procedure describes how to make changes to the configuration settings on the CloudForms Management Engine appliance.
 
 . After starting the appliance, log in with a user name of 'root'and the default password of 'smartvm'. This displays the Bash prompt for the *root* user.
-. Enter the 'appliance_console' command. The +CloudForms Management Engine Appliance summary screen+ displays.
+. Enter the 'appliance_console' command. The *CloudForms Management Engine Appliance summary screen* displays.
 . Press 'Enter' to manually configure settings.
 . Press the number for the item you want to change, and press 'Enter'. The options for your selection are displayed.
 . Follow the prompts to make the changes.
