--- a/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Virtualization/Configuring_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Virtualization/Configuring_CloudForms.adoc
@@ -14,10 +14,10 @@ The procedure describes how to make changes to the configuration settings on the
 
 . After starting the appliance, log in with a user name of 'root' and the default password of 'smartvm'. This displays the Bash prompt for the 'root' user.
 . Enter the 'appliance_console' command. The CloudForms Management Engine Appliance summary screen displays.
-. Press kbd:[Enter] to manually configure settings.
-. Press the number for the item you want to change, and press kbd:[Enter]. The options for your selection are displayed.
+. Press 'Enter' to manually configure settings.
+. Press the number for the item you want to change, and press 'Enter'. The options for your selection are displayed.
 . Follow the prompts to make the changes.
-. Press kbd:[Enter] to accept a setting where applicable.
+. Press 'Enter' to accept a setting where applicable.
 
 [NOTE]
 ======
@@ -90,7 +90,7 @@ Before installing an internal database, add a disk to the infrastructure hosting
 Choose disk:
 ----
 +
-Enter +1+ to choose /dev/vdb for the database location.
+Enter *1* to choose '/dev/vdb' for the database location.
 
 .  When prompted, enter a unique three digit region ID to create a new region.
 +
@@ -105,21 +105,21 @@ CloudForms Management Engine configures the internal database.
 
 === Configuring an External Database
 
-The 'postgresql.conf' file used with CloudForms Management Engine databases requires specific settings for correct operation. For example, it must correctly reclaim table space, control session timeouts, and format the 'PostgreSQL' server log for improved system support. Due to these requirements, Red Hat recommends that external CloudForms Management Engine databases use a 'postgresql.conf' file based on the standard file used by the CloudForms Management Engine appliance.
+The postgresql.conf file used with CloudForms Management Engine databases requires specific settings for correct operation. For example, it must correctly reclaim table space, control session timeouts, and format the PostgreSQL server log for improved system support. Due to these requirements, Red Hat recommends that external CloudForms Management Engine databases use a postgresql.conf file based on the standard file used by the CloudForms Management Engine appliance.
 
-Ensure you configure the settings in the 'postgresql.conf' to suit your system. For example, customize the shared_buffers setting according to the amount of real storage available in the external system hosting the 'PostgreSQL' instance. In addition, depending on the aggregate number of appliances expected to connect to the 'PostgreSQL' instance, it may be necessary to alter the max_connections setting.
+Ensure you configure the settings in the postgresql.conf to suit your system. For example, customize the shared_buffers setting according to the amount of real storage available in the external system hosting the PostgreSQL instance. In addition, depending on the aggregate number of appliances expected to connect to the PostgreSQL instance, it may be necessary to alter the max_connections setting.
 
-Because the 'postgresql.conf' file controls the operation of all databases managed by a single instance of 'PostgreSQL', do not mix CloudForms Management Engine databases with other types of databases in a single 'PostgreSQL' instance.
+Because the postgresql.conf file controls the operation of all databases managed by a single instance of PostgreSQL, do not mix CloudForms Management Engine databases with other types of databases in a single PostgreSQL instance.
 
 [NOTE]
 ======
-CloudForms Management Engine 3.x requires 'PostgreSQL version 9.2.4.'.
+CloudForms Management Engine 4.x requires 'PostgreSQL version 9.4.'.
 ======
 
 . Start the appliance and open a terminal console from your virtualization or cloud provider.
 . After starting the appliance, log in with a user name of 'root' and the default password of 'smartvm'. This displays the Bash prompt for the root user.
 . Enter the 'appliance_console' command. The CloudForms Management Engine Appliance summary screen displays.
-. Press kbd:[Enter] to manually configure settings.
+. Press 'Enter' to manually configure settings.
 . Select *8) Configure Database* from the menu.
 . You are prompted to create or fetch a security key.
 * If this is the first CFME appliance, select the option to create a key.
@@ -140,7 +140,7 @@ You can configure a worker appliance through the terminal. These steps demonstra
 . Start the appliance and open a terminal console from your virtualization or cloud provider.
 . After starting the appliance, log in with a user name of 'root' and the default password of 'smartvm'. This displays the Bash prompt for the root user.
 . Enter the 'appliance_console' command. The CloudForms Management Engine Appliance summary screen displays.
-. Press kbd:[Enter] to manually configure settings.
+. Press'Enter' to manually configure settings.
 . Select *8) Configure Database* from the menu.
 . You are prompted to create or fetch a security key. Select the option to fetch the key from the first CFME appliance. All CFME appliances in a multi-region deployment must use the same key.
 . Choose *2) External* for the database location.
