--- a/doc-Release_Notes/changes_in_the_core_set_of_ruby_gems.adoc
+++ b/doc-Release_Notes/changes_in_the_core_set_of_ruby_gems.adoc
@@ -3,12 +3,12 @@
 
 Users of Red Hat CloudForms can construct custom automation methods in Ruby to extend the product.
 Red Hat CloudForms ships with a core set of Ruby gems used by the CloudForms Management Engine (CFME) Rails Application.
-The Ruby gems in this set are subject to change, and have changed since CloudForms 3.2 (CloudForms Management Engine 5.4). If you are calling gems using Automate that are no longer in the CloudForms Management Engine Appliance, you can install them by using the +gem install+ command.
+The Ruby gems in this set are subject to change, and have changed since CloudForms 3.2 (CloudForms Management Engine 5.4). If you are calling gems using Automate that are no longer in the CloudForms Management Engine Appliance, you can install them by using the 'gem install' command.
 
-While gems can be imported into automation methods using [code]+require+, it is recommended that the authors of the automation methods clearly document the use of gems either in the core set or a custom set.
+While gems can be imported into automation methods using [code]'require', it is recommended that the authors of the automation methods clearly document the use of gems either in the core set or a custom set.
 It is the responsibility of the author of such custom automation to own the life cycle of any gem being referenced in those methods. 
 
-You can find a list of all gems included in the appliance in [path]_/var/www/miq/vmdb/log/gem_list.txt_
+You can find a list of all gems included in the appliance in [path]'_/var/www/miq/vmdb/log/gem_list.txt_'
 
 To get lists of all gems for different CloudForms Management Engine releases, see the following resource:
 
@@ -436,4 +436,3 @@ The following Ruby gems included in CloudForms Management Engine 5.4.3 have been
 |uglifier
 |2.7.2
 |===
-
