--- a/doc-Release_Notes/enabling_public_amis.adoc
+++ b/doc-Release_Notes/enabling_public_amis.adoc
@@ -4,9 +4,9 @@
 Alter the Main Configuration File to enable public AMIs from Amazon EC2. The following procedure makes public images viewable in CloudForms Management Engine.
 
 . Log in to the appliance.
-. Navigate to +Configure → Configuration → Advanced+.
-. Select the configuration file to edit from the +File+ list. If not already automatically selected, select +EVM Server Main Configuration+.
-. Search for the +get_public_images+ parameter:
+. Navigate to menu:Configure[Configuration > Advanced].
+. Select the configuration file to edit from the *File* list. If not already automatically selected, select *EVM Server Main Configuration*.
+. Search for the *get_public_images* parameter:
 +
 ----
   ems_refresh:
@@ -18,6 +18,6 @@ Alter the Main Configuration File to enable public AMIs from Amazon EC2. The fol
 ----
 +
 . Configure the visibility of public images:
-* To show public images, set the parameter to +get_public_images: true+.
-* To remove public images from view again, set the parameter to +get_public_images: false+.
+* To show public images, set the parameter to *get_public_images: true*.
+* To remove public images from view again, set the parameter to *get_public_images: false*.
 
