--- a/doc-Release_Notes/ui_locale.adoc
+++ b/doc-Release_Notes/ui_locale.adoc
@@ -3,12 +3,12 @@
 
 You can use this procedure to change the user interface locale to specify either English, Japanese, or Simplified Chinese.
 
-. Navigate to +Configure → My Settings+ from the navigation bar.
-. In the +Visual+ tab, go to +Display Settings+.
-. From the +Locale+ list, select the user interface locale to specify either +English+, +日本語+, or +简体中文+. The default is +English+.
+. Navigate to menu:Configure[My Settings] from the navigation bar.
+. In the *Visual* tab, go to *Display Settings*.
+. From the *Locale* list, select the user interface locale to specify either *English*, *日本語*, or *简体中文*. The default is *English*.
 +
 image::Cloudforms-SCH.png[width="100%"]
 +
-. You can also change the time zone from the +Time Zone+ list as required. The default is +(GMT+00:00) UTC+.
-. Click +Save+.
+. You can also change the time zone from the *Time Zone* list as required. The default is *(GMT+00:00) UTC*.
+. Click *Save*.
 
